--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Tracker</title>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Varela+Round&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script
       type="text/javascript"
       src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
@@ -19,11 +19,12 @@
   <body>
     <header>
       <h1>Project Tracker</h1>
+      <div id="currentTime"></div>
     </header>
     <main>
    
       </section>
     </main>
-    <script src="./assets/js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
