--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
 
 
       <section>
-        <div class="card" style="width: 18rem;">
-          <div class="card-header">
-            Featured
+        <div class="card" style="width: 24rem;">
+          <div class="card-header bg-dark text-white">
+            Intructions
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">An item</li>
-            <li class="list-group-item">A second item</li>
-            <li class="list-group-item">A third item</li>
-            <li><a href="#" class="btn btn-primary">Go somewhere</a></li>
+            <li class="list-group-item border-dark border-3">Click the button below to open a form and provide information for the following:</li>
+            <li class="list-group-item border-start border-end border-dark">Project Name</li>
+            <li class="list-group-item border-start border-end border-dark">Project Type</li>
+            <li class="list-group-item border-start border-end border-dark">Due Date</li>
+            <li class="list-group-item border-start border-end border-dark">Hourly Rate</li>
+            <li class="bg-dark text-white"><a href="#" class="btn btn-primary m-2">Go somewhere</a></li>
           </ul>
         </div>
       </section>
